# llmops-platform

./: .coverage  .dockerignore  .env.shared  .env.shared.example  .env.shopping  .env.shopping.example  .gitignore  Makefile  README.md  pyproject.toml
apps/api/: pyproject.toml
apps/api/llmops_api/: __init__.py  __main__.py  context.py  deps.py  lifecycle.py  main.py  settings.py
doc/: architecture-rfc.md
docs/: architecture_rfc.md
infrastructure/: README.md
infrastructure/docker/: .env.example  Dockerfile.api  README.md  docker-compose.yml
infrastructure/docker/litellm/: config.yaml
infrastructure/docker/postgres/init/: 01-vector.sql  02-langfuse-db.sql
tests/: conftest.py  in_memory_prompt_repository.py  test_architecture_contract.py  test_deterministic_shopping.py  test_host_http.py  test_plugin_discovery.py  test_prompt_seeding.py  test_shopping_llm_factory.py  test_tracing_invoke_config.py
