[project]
name = "llmops-api"
version = "0.1.0"
description = "FastAPI host shell for LLMOps (agent-agnostic)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "llmops-core",
    "prometheus-client>=0.21.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=0.2.0",
]

[project.scripts]
llmops-api = "llmops_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llmops_api"]

[tool.uv.sources]
llmops-core = { workspace = true }
